# julyland

./: .env  .gitignore  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json
.github/workflows/: build-push.yml  deploy-staging.yml
.hypothesis/constants/: cba09bb0ee99d3f9
.hypothesis/examples/04e6b3400353b141/: 0d0f1ba8a3a9da28  222b96656fbb3150  2689c51d13f3aa92  2a52e769bb9550b8  36ce2a837022e065  558072f8fcb7c03d  55ca3d11febd2c8c  91e87cfc8b8a90c1  974d4c0bd7be8713  a522f6c780bf44e7  ae13fa1adb8c5e62  afe9f8d726f31346  b84a423c8a618791  f02e13fe5d36cfef  f408aa2a32ba855d  f41a13f8aff461d3  f8aa8d624fcb0426  fe035944245acfd6  fe3e50f97b676564
.hypothesis/examples/0d0f1ba8a3a9da28/: 23fc00af280db5e6
.hypothesis/examples/222b96656fbb3150/: 071bf7734c4fde15  121f89e180f858eb  188a7ef299f51d80  (+55 more)
backend/iam-jl/: .gitignore
backend/jmanagement-jl/: .gitignore
backend/management/: Dockerfile  pyproject.toml
backend/management/app/api/: storage.py
backend/management/app/api/routes/: brands.py  categories.py  inventory.py  markets.py  products.py  variants.py
backend/management/app/exceptions/: __init__.py  common.py  handlers.py
backend/management/app/models/: __init__.py  inventory.py  market.py  media_asset.py  product.py  ranking.py
backend/management/app/schemas/: category.py  media.py
backend/management/app/services/: excel_service.py  generate_sku.py  store_to_bucket.py
frontend/: .npmrc  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/openapi/: iam-jl.json  management.json
(+325 files in other folders)
