[project]
name = "JulyLand"
version = "0.1.0"
authors = [
    {name = "Dan Kim",email = "daniel@mysingle.io"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.20.0,<3.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "emails (>=0.6,<0.7)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx-oauth (>=0.16.1,<0.17.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "schemathesis (>=3.39.16,<4.0.0)",
    "boto3 (>=1.38.9,<2.0.0)",
    "mypy-boto3-s3 (>=1.38.0,<2.0.0)",
    "minio (>=7.2.15,<8.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
